# apps/api/src/app/coupons/dto/validate-coupon-response.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class ValidateCouponResponseDto {
+  @ApiProperty() code!: string;
+  @ApiProperty() discountAmount!: number;
+}
