# apps/api/src/app/orders/dto/order-response.dto.ts
@@ -13,8 +13,11 @@ export class OrderResponseDto {
   @ApiProperty() id!: string;
   @ApiProperty() orderNumber!: string;
   @ApiProperty() email!: string;
+  @ApiProperty({ required: false, nullable: true }) userId?: string | null; // null/undefined = guest checkout
   @ApiProperty() status!: string;
   @ApiProperty() subtotal!: number;
+  @ApiProperty({ required: false }) discountTotal?: number;
+  @ApiProperty({ required: false }) couponCode?: string;
   @ApiProperty() grandTotal!: number;
   @ApiProperty({ type: OrderItemResponseDto, isArray: true })
   items!: OrderItemResponseDto[];
